2005-03-24  Matti Aarnio  <mea@zmailer.org>

	* man/smtp.8.in, transports/smtp/smtp.c, transports/smtp/smtp.h:
	    New '-O ignore-ezmlm' option.

	* transports/libta/ctlopen.c, include/ta.h,
	  transports/expirer/expirer.c, man/expirer.8.in,
	  man/manual-expirer.8.in:
	    Added optional '-u' selector for expirer to help
	    queue purge tasks in some situations, when target
	    X has lots of recipients, and only one of them is
	    failing with 400 codes and thus filling the queue...

	* smtpserver/smtpserver.c, smtpserver/policytest.h, 
	  smtpserver/mxverify.c,   smtpserver/policytest.c,
	  smtpserver/cfgread.c,    man/smtpserver.8.in:
	    - PARAM policydb-submit  -- separate DB for SUBMISSION
	    - GCC-4.0.0 fixes.

	* utils/vacation/vacation.c:
	    Match SleepyCat DB 4.1 API

	* scheduler/prototypes.h, scheduler/mailq.c:
	    GCC-4.0.0 fixes.

	* transports/smtp/smtp.c, transports/smtp/smtptls.c:
	    GCC-4.0.0 fixes.

	* transports/errormail/errormail.c:
	    Hardwire the default-form in with a bit more elegance, also
	    output all recipients on visible headers!

	* transports/libta/dnsgetrr.c:
	   Drop off  res_hnok() and res_dnok()  calls, which are
	   unnecessary in our use..

	* transports/smtp/smtp.c:
	    Debugging some suspicuous EZMLM-mode behaviour.

	* router/router.c, router/functions.c, router/prototypes.h:
	   Eliminate the need for 'struct shCmd' in prototypes.h
	   by moving a bit of code from  router.c  to functions.c.

2005-02-18  Matti Aarnio  <mea@zmailer.org>

	* transports/mailbox/mailbox.c, transports/mailbox/mboxpath.c:
	    Versatilize -DD..  -PP..  and  -XX..   options.

	* man/mailbox.8.in, man/mboxpath.1.in, man/vacation.1.in:
	    Document better the existing machinery.

	* doc/guides/smtpserver-spf:
	    Email from Darryl L. Miles about usage of SPF.

2005-01-27  Matti Aarnio  <mea@zmailer.org>

	* smtpserver/smtpserver.c:
	    Copy all  optarg  string data that remains in use
	    for more than getopt() loop time.
